- Added Custom link tag and corresponding encoding

--- a/RikkiFlashCards/RikkiFlashCards.csproj
+++ b/RikkiFlashCards/RikkiFlashCards.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>aspnet-AnkiFlashCards-294D3C0E-DACB-433C-9B32-4A400F23AC1F</UserSecretsId>
+    <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
 
