- Merged CardControllerTests WIP - Started Login features

--- a/RikkiFlashCards/appsettings.json
+++ b/RikkiFlashCards/appsettings.json
@@ -10,5 +10,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DefaultAdmin": {
+    "UserName": "Admin",
+    "Password": "Admin123", // needs to be atleast 5 characters long,  and should have digits and lowercase and uppercase
+    "Email":  "suneel.kanuri@gmail.com"
+  }
 }
