--- a/.gitignore
+++ b/.gitignore
@@ -330,6 +330,9 @@ ASALocalRun/
 # NVidia Nsight GPU debugger configuration file
 *.nvuser
 
+# appsettings secrets
+appsettings.*.json
+
 # MFractors (Xamarin productivity tool) working folder
 .mfractor/
 
