--- a/RikkiFlashCards/appsettings.Development.json
+++ b/RikkiFlashCards/appsettings.Development.json
@@ -1,9 +1,13 @@
-{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+{  
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=SUNEEL-PC;Database=AnkiFlashCards;Trusted_Connection=True;MultipleActiveResultSets=true",
+      "MySQLConnection": "Server=localhost;Database=AnkiFlashCards;User=root;Password=H9!v78hR"
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
     }
   }
-}
