--- a/RikkiFlashCards/appsettings.json
+++ b/RikkiFlashCards/appsettings.json
@@ -1,8 +1,4 @@
-{
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=SUNEEL-PC;Database=AnkiFlashCards;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "MySQLConnection": "Server=localhost;Database=AnkiFlashCards;User=root;Password=H9!v78hR"
-  },
+{  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -14,6 +10,6 @@
   "DefaultAdmin": {
     "UserName": "Admin",
     "Password": "Admin123", // needs to be atleast 5 characters long,  and should have digits and lowercase and uppercase
-    "Email":  "suneel.kanuri@gmail.com"
+    "Email":  "admin@admin.com"
   }
 }
