--- a/RikkiFlashCards/appsettings.json
+++ b/RikkiFlashCards/appsettings.json
@@ -8,8 +8,8 @@
   },
   "AllowedHosts": "*",
   "DefaultAdmin": {
-    "UserName": "Admin",
-    "Password": "Admin123", // needs to be atleast 5 characters long,  and should have digits and lowercase and uppercase
+    "UserName": "",
+    "Password": "", // needs to be atleast 5 characters long,  and should have digits and lowercase and uppercase
     "Email":  "admin@admin.com"
   }
 }
