--- a/.gitignore
+++ b/.gitignore
@@ -330,8 +330,10 @@ ASALocalRun/
 # NVidia Nsight GPU debugger configuration file
 *.nvuser
 
-# appsettings secrets
-appsettings.*.json
+# ignore appsettings secrets
+**/appsettings.development.json
+**/appsettings.staging.json
+**/appsettings.production.json
 
 # MFractors (Xamarin productivity tool) working folder
 .mfractor/
