--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# ignore appsettings secrets
+**/appsettings.development.json
+**/appsettings.staging.json
+**/appsettings.production.json
+
 # User-specific files
 *.rsuser
 *.suo
