changes to appsettings

--- a/RikkiFlashCards/appsettings.json
+++ b/RikkiFlashCards/appsettings.json
@@ -1,15 +1,19 @@
-{  
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+{
+    "ConnectionStrings": {
+      "DefaultConnection": "",
+      "MySQLConnection": ""
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "AllowedHosts": "*",
+    "DefaultAdmin": {
+      "UserName": "",
+      "Password": "", // needs to be atleast 5 characters long,  and should have digits and lowercase and uppercase 
+      "Email": "admin@admin.com"
     }
-  },
-  "AllowedHosts": "*",
-  "DefaultAdmin": {
-    "UserName": "",
-    "Password": "", // needs to be atleast 5 characters long,  and should have digits and lowercase and uppercase 
-    "Email":  "admin@admin.com"
   }
-}
