- added cs template to default appsettings file

--- a/RikkiFlashCards/appsettings.json
+++ b/RikkiFlashCards/appsettings.json
@@ -1,4 +1,8 @@
-{  
+{
+  "ConnectionStrings": {
+    "DefaultConnection": "",
+    "MySQLConnection": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -10,6 +14,6 @@
   "DefaultAdmin": {
     "UserName": "",
     "Password": "", // needs to be atleast 5 characters long,  and should have digits and lowercase and uppercase 
-    "Email":  "admin@admin.com"
+    "Email": "admin@admin.com"
   }
 }
